# josh

./: .gitignore  .replit  BATCH_REMOTE.md  COMPONENT_7_VALIDATION_SUMMARY.md  CONFORMANCE_REPORT.md  DEVELOPING.md  IMPLEMENTATION_PLAN.md  INVESTIGATION_INDEX.md  INVESTIGATION_REPORT.md  INVESTIGATION_SUMMARY.md  JavaSpec.md  K8S_INTEGRATION_TESTING.md  K8S_PLANNING.md  LICENSE  LanguageSpecification.md  PREPROCESSING_IMPLEMENTATION_PLAN.md  README.md  README_INVESTIGATION.md  RUN_BATCH_INTEGRATION.md  build.gradle  conformance-validation-report.md  dependency_viewer.html  llms-full.txt  llms.txt  pom.xml  replit.nix  settings.gradle  simple_profile.josh  test_config_defaults.josh  test_parser.java  test_riverside_tiny.jshd  test_simple_template.josh  test_template.josh  timeit.md
.claude/: settings.local.json
.devcontainer/: DEVELOPING.md  Dockerfile  devcontainer.json
cloud-img/: Dockerfile.batch  Dockerfile.dev  Dockerfile.job  Dockerfile.prod  entrypoint.sh  preprocess-entrypoint.sh  run-entrypoint.sh
context/: CONFORMANCE_ANALYSIS.md  DEV_RESTORE_SUMMARY.md  DOCUMENTATION_GAPS.md  LANGUAGE_DESIGN_CHOICES.md
demo.joshsim.org/: PROPOSAL.md  index.html
deploy/: Dockerfile
docs/: performance.md
editor/: index.html
examples/: age.josh  autobox_distribution.josh  autobox_scalar.josh  config_example.jshc  test.sh  (+20 more)
joshpy/: pyproject.toml
joshpy/joshpy/: __init__.py  embed.py  geocode.py  metadata.py  parse.py  remote.py  strategy.py  test_geocode.py  test_metadata.py  test_parse.py  test_virtual_file.py  virtual_file.py
joshpy/joshpy/data/: inspect.py
(+1477 files in other folders)
