[project]
name = "joshpy"
version = "0.0.1"
authors = [
  { name="A Samuel Pottinger", email="sam.pottinger@berkeley.edu" },
]
description = "Tools for interacting with Josh simluations from Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
]
dependencies = [
  "requests ~= 2.32.3",
  "wasmer ~= 1.1.0",
  "wasmer_compiler_cranelift ~= 1.1.0"
]

[tool.setuptools.package-data]
afscgap = ["py.typed"]

[project.urls]
"Homepage" = "https://joshsim.org"
"Documentation" = "https://joshsim.org/integration.html"
"Source" = "https://github.com/SchmidtDSE/josh"
"Issue Tracker" = "https://github.com/SchmidtDSE/josh/issues"
"Changelog" = "https://github.com/SchmidtDSE/josh#version-history"

[project.optional-dependencies]
dev = [
  "build",
  "nose2",
  "mypy",
  "pyflakes",
  "pdoc",
  "twine",
  "types-requests"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = []
